--- a/src/css/register.less
+++ b/src/css/register.less
@@ -1,3 +1,107 @@
-div {
-    color: red;
+.register-box {
+    margin-left: 32px;
+    .register-header {
+        width: 1198px;
+        height: 72px;
+        background: linear-gradient(180deg, rgba(0, 153, 255, 1) 0%, rgba(0, 153, 255, 1) 0%, rgba(0, 153, 255, 1) 45%, rgba(255, 255, 255, 1) 100%, rgba(255, 255, 255, 1) 100%);
+        .logo {
+            width: 123px;
+            height: 62px;
+            display: inline-block;
+            vertical-align: top;
+        }
+        p {
+            display: inline-block;
+            color: #fff;
+        }
+        .to-index {
+            float: right;
+            margin-right: 20px;
+            margin-top: 30px;
+        }
+        a {
+            color: #FFCC33;
+            text-decoration: none;
+        }
+        a :hover {
+            color: #000;
+        }
+    }
+    .registerPage-header {
+        width: 900px;
+        height: 70px;
+        padding-top: 30px;
+        margin-left: 99px;
+        .btn {
+            font-size: 15px;
+            outline: none;
+            height: 40px;
+            width: 140px;
+            border-radius: 0;
+            border-top-left-radius: 19px;
+            border-top-right-radius: 19px;
+            border-color: #00ccff;
+            background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(0, 204, 255, 1) 100%, rgba(0, 204, 255, 1) 100%);
+        }
+        .btn:hover {
+            color: #fff;
+            background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(0, 0, 255, 1) 100%, rgba(0, 0, 255, 1) 100%);
+        }
+        .box {
+            float: right;
+            span {
+                color: #FFCC33;
+            }
+            a {
+                text-decoration: none;
+                color: #FFCC33;
+            }
+            a:hover {
+                color: rgb(0, 204, 255);
+            }
+        }
+    }
+    .content {
+        width: 900px;
+        height: 692px;
+        border: 1px solid #17c1fe;
+        margin-left: 99px;
+        .content-header {
+            height: 62px;
+            background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(109, 145, 248, .2) 100%, rgba(109, 145, 248, .2) 100%);
+            p {
+                color: #999;
+                margin: 0;
+                line-height: 62px;
+            }
+        }
+        .content-member {
+            margin-top: 20px;
+            li {
+                margin-top: 10px;
+                span {
+                    display: inline-block;
+                    vertical-align: top;
+                    line-height: 39px;
+                }
+                .input-box {
+                    display: inline-block;
+                    input {
+                        width: 447px;
+                        height: 35px;
+                        border: 2px solid #33d6ff;
+                        border-radius: 10px;
+                        outline: none;
+                        margin-left: 15px;
+                        padding: 0 20px;
+                    }
+                    label {
+                        margin-left: 35px;
+                        line-height: 30px;
+                        color: red;
+                    }
+                }
+            }
+        }
+    }
 }
