--- a/src/css/style.less
+++ b/src/css/style.less
@@ -1,6 +1,7 @@
 body {
-    .font-default {
-        font-family: 'Arial Normal', 'Arial';
+    font-family: 'Arial Normal', 'Arial';
+    font-style: normal;
+    .font-13 {
         font-weight: 400;
         font-style: normal;
         font-size: 13px;
@@ -8,46 +9,32 @@ body {
         text-align: center;
         line-height: normal;
     }
-    .font-h1 {
-        font-family: 'Arial Normal', 'Arial';
-        font-weight: bold;
-        font-style: normal;
+    .font-32 {
         font-size: 32px;
-        text-align: left;
     }
-    .font-h2 {
-        font-family: 'Arial Normal', 'Arial';
-        font-weight: bold;
-        font-style: normal;
+    .font-30 {
+        font-size: 30px;
+    }
+    .font-24 {
         font-size: 24px;
-        text-align: left;
     }
-    .font-h3 {
-        font-family: 'Arial Normal', 'Arial';
-        font-weight: bold;
-        font-style: normal;
+    .font-22 {
+        font-size: 22px;
+    }
+    .font-18 {
         font-size: 18px;
-        text-align: left;
     }
-    .font-h4 {
-        font-family: 'Arial Normal', 'Arial';
-        font-weight: bold;
-        font-style: normal;
+    .font-16 {
+        font-size: 16px;
+    }
+    .font-14 {
         font-size: 14px;
-        text-align: left;
     }
-    .font-h5 {
-        font-family: 'Arial Normal', 'Arial';
+    .font-bold {
         font-weight: bold;
-        font-style: normal;
-        text-align: left;
     }
-    .font-h6 {
-        font-family: 'Arial Normal', 'Arial';
-        font-weight: bold;
-        font-style: normal;
+    .font-10 {
         font-size: 10px;
-        text-align: left;
     }
     .label {
         font-size: 14px;
@@ -57,16 +44,18 @@ body {
         outline: none;
         text-decoration: none;
     }
-    a:hover {
-        text-decoration: none;
-        text-shadow: rgba(153, 153, 153, .647) 1px 1px 2px;
-        color: rgb(0, 204, 255);
-    }
     .document {
         width: 1262px;
         margin: 0 auto;
         .foot {
             border-top: 1px solid #ccc;
+            font-size: 13px;
+            p {
+                margin: 0;
+            }
+            .text {
+                margin-top: 8px;
+            }
         }
     }
     .border-color {
