--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,8 @@
-body .font-default {
+body {
   font-family: 'Arial Normal', 'Arial';
+  font-style: normal;
+}
+body .font-13 {
   font-weight: 400;
   font-style: normal;
   font-size: 13px;
@@ -7,46 +10,32 @@ body .font-default {
   text-align: center;
   line-height: normal;
 }
-body .font-h1 {
-  font-family: 'Arial Normal', 'Arial';
-  font-weight: bold;
-  font-style: normal;
+body .font-32 {
   font-size: 32px;
-  text-align: left;
 }
-body .font-h2 {
-  font-family: 'Arial Normal', 'Arial';
-  font-weight: bold;
-  font-style: normal;
+body .font-30 {
+  font-size: 30px;
+}
+body .font-24 {
   font-size: 24px;
-  text-align: left;
 }
-body .font-h3 {
-  font-family: 'Arial Normal', 'Arial';
-  font-weight: bold;
-  font-style: normal;
+body .font-22 {
+  font-size: 22px;
+}
+body .font-18 {
   font-size: 18px;
-  text-align: left;
 }
-body .font-h4 {
-  font-family: 'Arial Normal', 'Arial';
-  font-weight: bold;
-  font-style: normal;
+body .font-16 {
+  font-size: 16px;
+}
+body .font-14 {
   font-size: 14px;
-  text-align: left;
 }
-body .font-h5 {
-  font-family: 'Arial Normal', 'Arial';
+body .font-bold {
   font-weight: bold;
-  font-style: normal;
-  text-align: left;
 }
-body .font-h6 {
-  font-family: 'Arial Normal', 'Arial';
-  font-weight: bold;
-  font-style: normal;
+body .font-10 {
   font-size: 10px;
-  text-align: left;
 }
 body .label {
   font-size: 14px;
@@ -56,17 +45,19 @@ body a {
   outline: none;
   text-decoration: none;
 }
-body a:hover {
-  text-decoration: none;
-  text-shadow: rgba(153, 153, 153, 0.647) 1px 1px 2px;
-  color: #00ccff;
-}
 body .document {
   width: 1262px;
   margin: 0 auto;
 }
 body .document .foot {
   border-top: 1px solid #ccc;
+  font-size: 13px;
+}
+body .document .foot p {
+  margin: 0;
+}
+body .document .foot .text {
+  margin-top: 8px;
 }
 body .border-color {
   border-color: #33d6ff;
