--- a/src/css/register.css
+++ b/src/css/register.css
@@ -1,6 +1,9 @@
 .register-box {
   margin-left: 32px;
 }
+.register-box label {
+  margin: 0;
+}
 .register-box .register-header {
   width: 1198px;
   height: 72px;
@@ -13,8 +16,13 @@
   vertical-align: top;
 }
 .register-box .register-header p {
+  font-family: '华文行楷';
   display: inline-block;
   color: #fff;
+  text-rendering: optimizeLegibility;
+  text-shadow: 3px 3px 10px rgba(102, 102, 102, 0.6);
+  line-height: 72px;
+  margin-bottom: 0;
 }
 .register-box .register-header .to-index {
   float: right;
@@ -31,7 +39,7 @@
 .register-box .registerPage-header {
   width: 900px;
   height: 70px;
-  padding-top: 30px;
+  padding: 30px 0 0 30px;
   margin-left: 99px;
 }
 .register-box .registerPage-header .btn {
@@ -51,6 +59,8 @@
 }
 .register-box .registerPage-header .box {
   float: right;
+  margin-right: 35px;
+  margin-top: 10px;
 }
 .register-box .registerPage-header .box span {
   color: #FFCC33;
@@ -64,7 +74,7 @@
 }
 .register-box .content {
   width: 900px;
-  height: 692px;
+  min-height: 492px;
   border: 1px solid #17c1fe;
   margin-left: 99px;
 }
@@ -77,22 +87,20 @@
   margin: 0;
   line-height: 62px;
 }
-.register-box .content .content-member {
-  margin-top: 20px;
-}
-.register-box .content .content-member li {
+.register-box .content li {
   margin-top: 10px;
+  margin-left: 190px;
 }
-.register-box .content .content-member li span {
+.register-box .content li span {
   display: inline-block;
   vertical-align: top;
   line-height: 39px;
 }
-.register-box .content .content-member li .input-box {
+.register-box .content li .input-box {
   display: inline-block;
+  min-height: 65px;
 }
-.register-box .content .content-member li .input-box input {
-  width: 447px;
+.register-box .content li .input-box input[type='text'] {
   height: 35px;
   border: 2px solid #33d6ff;
   border-radius: 10px;
@@ -100,8 +108,66 @@
   margin-left: 15px;
   padding: 0 20px;
 }
-.register-box .content .content-member li .input-box label {
+.register-box .content li .input-box .width-type0 {
+  width: 461px;
+}
+.register-box .content li .input-box .width-type1 {
+  width: 447px;
+}
+.register-box .content li .input-box .width-type2 {
+  width: 433px;
+}
+.register-box .content li .input-box .width-type3 {
+  width: 377px;
+}
+.register-box .content li .input-box label {
   margin-left: 35px;
   line-height: 30px;
   color: red;
+}
+.register-box .content li .radio-box {
+  display: inline-block;
+  width: 447px;
+  height: 39px;
+  padding-left: 20px;
+}
+.register-box .content li .radio-box input {
+  line-height: 39px;
+}
+.register-box .content li .radio-box #group {
+  margin-left: 20px;
+}
+.register-box .content li .radio-box label {
+  line-height: 39px;
+  color: #999;
+  cursor: pointer;
+}
+.register-box .content .content-member {
+  margin-top: 20px;
+}
+.register-box .content .content-developer {
+  margin-top: 20px;
+  display: none;
+}
+.register-box .post-box {
+  text-align: center;
+  margin: 15px 0 30px 0;
+}
+.register-box .post-box .post-btn {
+  outline: none;
+  border-color: #0099ff;
+  width: 342px;
+  height: 40px;
+  background: linear-gradient(180deg, #ffffff 0%, #ffffff 0%, #00ccff 100%, #00ccff 100%);
+}
+.register-box .post-box input {
+  margin-left: 15px;
+  line-height: 40px;
+  cursor: pointer;
+}
+.register-box .post-box label {
+  color: #333;
+  line-height: 40px;
+  cursor: pointer;
+  margin-left: 5px;
 }
