--- a/src/css/register.less
+++ b/src/css/register.less
@@ -1,5 +1,8 @@
 .register-box {
     margin-left: 32px;
+    label {
+        margin: 0;
+    }
     .register-header {
         width: 1198px;
         height: 72px;
@@ -11,8 +14,13 @@
             vertical-align: top;
         }
         p {
+            font-family: '华文行楷';
             display: inline-block;
             color: #fff;
+            text-rendering: optimizeLegibility;
+            text-shadow: 3px 3px 10px rgba(102, 102, 102, 0.6);
+            line-height: 72px;
+            margin-bottom: 0;
         }
         .to-index {
             float: right;
@@ -30,7 +38,7 @@
     .registerPage-header {
         width: 900px;
         height: 70px;
-        padding-top: 30px;
+        padding: 30px 0 0 30px;
         margin-left: 99px;
         .btn {
             font-size: 15px;
@@ -49,6 +57,8 @@
         }
         .box {
             float: right;
+            margin-right: 35px;
+            margin-top: 10px;
             span {
                 color: #FFCC33;
             }
@@ -63,7 +73,7 @@
     }
     .content {
         width: 900px;
-        height: 692px;
+        min-height: 492px;
         border: 1px solid #17c1fe;
         margin-left: 99px;
         .content-header {
@@ -75,33 +85,89 @@
                 line-height: 62px;
             }
         }
-        .content-member {
-            margin-top: 20px;
-            li {
-                margin-top: 10px;
-                span {
-                    display: inline-block;
-                    vertical-align: top;
-                    line-height: 39px;
+        li {
+            margin-top: 10px;
+            margin-left: 190px;
+            span {
+                display: inline-block;
+                vertical-align: top;
+                line-height: 39px;
+            }
+            .input-box {
+                display: inline-block;
+                min-height: 65px;
+                input[type='text'] {
+                    height: 35px;
+                    border: 2px solid #33d6ff;
+                    border-radius: 10px;
+                    outline: none;
+                    margin-left: 15px;
+                    padding: 0 20px;
                 }
-                .input-box {
-                    display: inline-block;
-                    input {
-                        width: 447px;
-                        height: 35px;
-                        border: 2px solid #33d6ff;
-                        border-radius: 10px;
-                        outline: none;
-                        margin-left: 15px;
-                        padding: 0 20px;
-                    }
-                    label {
-                        margin-left: 35px;
-                        line-height: 30px;
-                        color: red;
-                    }
+                .width-type0 {
+                    width: 461px;
+                }
+                .width-type1 {
+                    width: 447px;
+                }
+                .width-type2 {
+                    width: 433px;
+                }
+                .width-type3 {
+                    width: 377px;
+                }
+                label {
+                    margin-left: 35px;
+                    line-height: 30px;
+                    color: red;
                 }
             }
+            .radio-box {
+                display: inline-block;
+                width: 447px;
+                height: 39px;
+                padding-left: 20px;
+                input {
+                    line-height: 39px;
+                }
+                #group {
+                    margin-left: 20px;
+                }
+                label {
+                    line-height: 39px;
+                    color: #999;
+                    cursor: pointer;
+                }
+            }
+        }
+        .content-member {
+            margin-top: 20px;
+        }
+        .content-developer {
+            margin-top: 20px;
+            display: none;
+        }
+    }
+    .post-box {
+        text-align: center;
+        margin: 15px 0 30px 0;
+        .post-btn {
+            outline: none;
+            border-color: #0099ff;
+            width: 342px;
+            height: 40px;
+            background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(0, 204, 255, 1) 100%, rgba(0, 204, 255, 1) 100%);
+        }
+        input {
+            margin-left: 15px;
+            line-height: 40px;
+            cursor: pointer;
+        }
+        label {
+            color: #333;
+            line-height: 40px;
+            cursor: pointer;
+            margin-left: 5px;
         }
     }
 }
