--- a/src/css/register.less
+++ b/src/css/register.less
@@ -91,30 +91,24 @@
             span {
                 display: inline-block;
                 vertical-align: top;
-                line-height: 39px;
+                line-height: 35px;
+            }
+            .label {
+                width: 60px;
+                color: #33d6ff;
+                padding: 0;
             }
             .input-box {
                 display: inline-block;
                 min-height: 65px;
-                input[type='text'] {
+                input {
+                    width: 433px;
                     height: 35px;
                     border: 2px solid #33d6ff;
                     border-radius: 10px;
                     outline: none;
                     margin-left: 15px;
                     padding: 0 20px;
-                }
-                .width-type0 {
-                    width: 461px;
-                }
-                .width-type1 {
-                    width: 447px;
-                }
-                .width-type2 {
-                    width: 433px;
-                }
-                .width-type3 {
-                    width: 377px;
                 }
                 label {
                     margin-left: 35px;
@@ -129,6 +123,7 @@
                 padding-left: 20px;
                 input {
                     line-height: 39px;
+                    outline: none;
                 }
                 #group {
                     margin-left: 20px;
@@ -139,6 +134,9 @@
                     cursor: pointer;
                 }
             }
+        }
+        .group-li {
+            display: none;
         }
         .content-member {
             margin-top: 20px;
