--- a/src/css/login.less
+++ b/src/css/login.less
@@ -84,6 +84,7 @@
             margin-top: 15px;
             .forgot-password {
                 color: red;
+                cursor: pointer;
             }
         }
         .line-five {
