--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,6 +31,9 @@ body .font-16 {
 body .font-14 {
   font-size: 14px;
 }
+body .font-12 {
+  font-size: 12px;
+}
 body .font-bold {
   font-weight: bold;
 }
