--- a/src/css/style.less
+++ b/src/css/style.less
@@ -30,6 +30,9 @@ body {
     .font-14 {
         font-size: 14px;
     }
+    .font-12 {
+        font-size: 12px;
+    }
     .font-bold {
         font-weight: bold;
     }
