--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,86 @@
-div {
-  color: red;
+.document .header {
+  width: 100%;
+  height: 75px;
+}
+.document .header .logo {
+  width: 123px;
+  height: 62px;
+  vertical-align: top;
+}
+.document .header .search-box {
+  display: inline-block;
+  margin-top: 15px;
+}
+.document .header .search-box .input-box {
+  width: 674px;
+  height: 36px;
+  border: 2px solid #00ccff;
+  border-radius: 15px;
+}
+.document .header .search-box .input-box input {
+  outline: none;
+  border: none;
+  width: 545px;
+  height: 22px;
+  margin: 5px 0 5px 15px;
+}
+.document .header .search-box .input-box .search-btn {
+  display: inline-block;
+  width: 110px;
+  height: 32px;
+  background: #00ccff;
+  border-radius: 13px;
+}
+.document .header .search-box .input-box .search-btn span {
+  display: inline-block;
+  line-height: 32px;
+  margin-left: 10px;
+  color: #fff;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
+  letter-spacing: 4px;
+}
+.document .header .search-box .keyWord-box {
+  margin: 5px 0 0 15px;
+}
+.document .header .search-box .keyWord-box ul {
+  display: inline-block;
+}
+.document .header .search-box .keyWord-box ul li {
+  cursor: pointer;
+}
+.document .header .search-box .keyWord-box ul li span {
+  color: #0099FF;
+}
+.document .header .member-box {
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 20px;
+}
+.document .header .member-box span {
+  font-family: '黑体 Bold', '黑体 Regular', '黑体';
+  font-size: 15px;
+  color: #FFCC33;
+  font-weight: 700px;
+}
+.document .header .member-box a {
+  text-decoration: none;
+  font-family: '黑体 Bold', '黑体 Regular', '黑体';
+  font-size: 15px;
+  color: #FFCC33;
+  font-weight: 700px;
+}
+.document .header .member-box a:hover {
+  color: #00ccff;
+}
+.document .header .member-box .split-line {
+  color: #666;
+  display: inline-block;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.64);
+  margin-right: 10px;
+}
+.document .nav {
+  margin-left: 11px;
+  height: 46px;
+  width: 1240px;
+  background: linear-gradient(180deg, #0099ff 0%, #0099ff 0%, #0099ff 45%, #ffffff 100%, #ffffff 100%);
 }
