--- a/src/css/login.less
+++ b/src/css/login.less
@@ -39,6 +39,7 @@
             padding: 6.5px 5px;
         }
         .line-one {
+            height: 65px;
             overflow: auto;
             .logo {
                 display: inline-block;
