--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,6 +1,7 @@
 .document .header {
   width: 100%;
   height: 75px;
+  padding-left: 11px;
 }
 .document .header .logo {
   width: 123px;
@@ -23,6 +24,7 @@
   width: 545px;
   height: 22px;
   margin: 5px 0 5px 15px;
+  font-size: 12px;
 }
 .document .header .search-box .input-box .search-btn {
   display: inline-block;
@@ -53,21 +55,24 @@
 }
 .document .header .member-box {
   display: inline-block;
+  min-width: 405px;
+  text-align: right;
   vertical-align: top;
-  padding-left: 20px;
+  padding-left: 130px;
+  margin-top: 15px;
 }
 .document .header .member-box span {
   font-family: '黑体 Bold', '黑体 Regular', '黑体';
   font-size: 15px;
   color: #FFCC33;
-  font-weight: 700px;
+  font-weight: 700;
 }
 .document .header .member-box a {
   text-decoration: none;
   font-family: '黑体 Bold', '黑体 Regular', '黑体';
   font-size: 15px;
   color: #FFCC33;
-  font-weight: 700px;
+  font-weight: 700;
 }
 .document .header .member-box a:hover {
   color: #00ccff;
@@ -78,9 +83,108 @@
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.64);
   margin-right: 10px;
 }
+.document .header .member-box .line-one {
+  min-width: 100px;
+  height: 21px;
+}
+.document .header .member-box .line-two {
+  margin-top: 10px;
+}
 .document .nav {
   margin-left: 11px;
+  margin-top: 30px;
   height: 46px;
   width: 1240px;
-  background: linear-gradient(180deg, #0099ff 0%, #0099ff 0%, #0099ff 45%, #ffffff 100%, #ffffff 100%);
+  background: linear-gradient(180deg, rgba(0, 153, 255, 0.6) 0%, rgba(0, 153, 255, 0.6) 0%, rgba(0, 153, 255, 0.6) 45%, #ffffff 100%, #ffffff 100%);
+  border-radius: 5px;
+  padding-left: 20px;
+}
+.document .nav li {
+  width: 110px;
+  cursor: pointer;
+  position: relative;
+  text-align: center;
+}
+.document .nav li span {
+  font-size: 15px;
+  font-weight: 700;
+  color: #fff;
+  line-height: 46px;
+}
+.document .nav li .education-box {
+  position: absolute;
+  width: 110px;
+  background: #99CCFF;
+  text-align: center;
+  display: none;
+  z-index: 999;
+}
+.document .nav li .education-box p {
+  margin: 0;
+  font-size: 15px;
+  font-weight: 700;
+  color: #fff;
+  line-height: 45px;
+}
+.document .nav li .education-box p:hover {
+  color: #ffcc33;
+}
+.document .nav li:hover span {
+  color: #ffcc33;
+}
+.document .nav .education:hover .education-box {
+  display: block;
+}
+.document .content {
+  width: 1136px;
+}
+.document .content .ranking {
+  background: #FAFAFA;
+  padding-bottom: 10px;
+}
+.document .content .ranking .title-box {
+  margin-bottom: 10px;
+}
+.document .content .ranking .title-box span {
+  font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight: 700;
+  font-style: normal;
+  font-size: 18px;
+  color: #FFCC33;
+  vertical-align: bottom;
+}
+.document .content .ranking .vr-box {
+  height: 225px;
+  border: 1px solid #d7d7d7;
+  margin: 0 10px 20px 10px;
+  background: #fff;
+}
+.document .content .ranking .vr-box .name {
+  margin: 5px 0 5px 5px;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 15px;
+  color: #999;
+}
+.document .content .ranking .vr-box .id-box {
+  display: inline-block;
+  font-size: 12px;
+  color: #999;
+  margin: 5px 50px 0 5px;
+}
+.document .content .ranking .vr-box .id-box span {
+  display: inline-block;
+  margin-left: 5px;
+}
+.document .content .ranking .vr-box .hot-num {
+  display: inline-block;
+  font-size: 12px;
+  color: #999;
+}
+.document .content .ranking .vr-box .hot-num span {
+  display: inline-block;
+  margin-left: 5px;
+}
+.document .content .download-ranking {
+  margin-top: 30px;
 }
