--- a/src/css/index.css
+++ b/src/css/index.css
@@ -154,10 +154,18 @@
   vertical-align: bottom;
 }
 .document .content .ranking .vr-box {
-  height: 225px;
   border: 1px solid #d7d7d7;
   margin: 0 10px 20px 10px;
   background: #fff;
+}
+.document .content .ranking .vr-box .product-img {
+  width: 232px;
+  min-height: 175px;
+}
+.document .content .ranking .vr-box .product-img:hover {
+  border-right: 4px solid #fff;
+  border-bottom: 4px solid #fff;
+  box-shadow: 4px 4px 4px #888888;
 }
 .document .content .ranking .vr-box .name {
   margin: 5px 0 5px 5px;
