--- a/src/css/index.less
+++ b/src/css/index.less
@@ -157,10 +157,18 @@
                 }
             }
             .vr-box {
-                height: 225px;
                 border: 1px solid #d7d7d7;
                 margin: 0 10px 20px 10px;
                 background: #fff;
+                .product-img {
+                    width: 232px;
+                    min-height: 175px;
+                }
+                .product-img:hover {
+                    border-right: 4px solid #fff;
+                    border-bottom: 4px solid #fff;
+                    box-shadow: 4px 4px 4px #888888;
+                }
                 .name {
                     margin: 5px 0 5px 5px;
                     font-weight: 700;
