--- a/src/css/index.less
+++ b/src/css/index.less
@@ -160,6 +160,7 @@
                 border: 1px solid #d7d7d7;
                 margin: 0 10px 20px 10px;
                 background: #fff;
+                cursor: pointer;
                 .product-img {
                     width: 232px;
                     min-height: 175px;
