--- a/src/css/index.css
+++ b/src/css/index.css
@@ -157,6 +157,7 @@
   border: 1px solid #d7d7d7;
   margin: 0 10px 20px 10px;
   background: #fff;
+  cursor: pointer;
 }
 .document .content .ranking .vr-box .product-img {
   width: 232px;
