--- a/src/css/vrproduct.less
+++ b/src/css/vrproduct.less
@@ -1,3 +1,76 @@
-div {
-    color: red;
+.content {
+    width: 1138px;
+    margin-left: 62px;
+    min-height: 600px;
+    .title {
+        font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
+        font-weight: 700;
+        font-style: normal;
+        font-size: 22px;
+        text-shadow: 2px 2px 5px rgba(0, 153, 255, .4);
+    }
+    .detail {
+        .video-box {
+            display: inline-block;
+            max-width: 793px;
+            min-height: 400px;
+            .video-number {
+                span {
+                    font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
+                    font-weight: 700;
+                    font-style: normal;
+                    color: #999;
+                }
+                ul {
+                    li {
+                        margin-right: 30px;
+                    }
+                    li:nth-child(4) {
+                        margin-right: 0;
+                    }
+                    li:nth-child(5) {
+                        margin-right: 0;
+                    }
+                }
+            }
+        }
+        .video-detail {
+            display: inline-block;
+            vertical-align: top;
+            width: 320px;
+            margin-left: 20px;
+            .download-btn {
+                width: 100%;
+                border: 2px solid #00ccff;
+                border-radius: 10px;
+                height: 45px;
+                background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 0%, rgba(0, 204, 255, 1) 100%, rgba(0, 204, 255, 1) 100%);
+                span {
+                    font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
+                    font-weight: 700;
+                    font-style: normal;
+                    font-size: 16px;
+                    color: #666;
+                }
+            }
+            .contact-way {
+                width: 100%;
+                margin-top: 15px;
+                border: 1px solid #00cccc;
+                border-radius: 20px;
+                padding: 20px 0 0 0;
+                font-weight: 700;
+                p:not(:first-child) {
+                    margin-left: 40px;
+                }
+                img {
+                    width: 32px;
+                    margin-right: 10px;
+                }
+            }
+            .video-text {
+                margin-top: 20px;
+            }
+        }
+    }
 }
