--- a/src/css/classifylist.less
+++ b/src/css/classifylist.less
@@ -1,3 +1,83 @@
-div {
-    color: red;
+.header {
+    width: 1136px;
+    background: #fafafa;
+    padding: 10px 0;
+    margin-left: 62px;
+    p {
+        font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
+        font-weight: 700;
+        font-style: normal;
+        color: #999;
+        font-size: 14px;
+        .vr-type {
+            color: #FFCC00;
+        }
+        span {
+            display: inline-block;
+        }
+        span {
+            margin-left: 20px;
+        }
+    }
+    .list-type {
+        span {
+            cursor: pointer;
+        }
+        span:hover {
+            color: #FFCC00;
+        }
+        .active {
+            color: #FFCC00;
+        }
+    }
+}
+
+.content {
+    background: #fafafa;
+    margin: 30px 62px;
+    width: 1136px;
+    .vr-list {
+        padding-bottom: 10px;
+        .vr-box {
+            border: 1px solid #d7d7d7;
+            margin: 0 10px 20px 10px;
+            background: #fff;
+            cursor: pointer;
+            .product-img {
+                width: 100%;
+                min-height: 175px;
+            }
+            .product-img:hover {
+                border-right: 4px solid #fff;
+                border-bottom: 4px solid #fff;
+                box-shadow: 4px 4px 4px #888888;
+            }
+            .name {
+                margin: 5px 0 5px 5px;
+                font-weight: 700;
+                font-style: normal;
+                font-size: 15px;
+                color: #999;
+            }
+            .id-box {
+                display: inline-block;
+                font-size: 12px;
+                color: #999;
+                margin: 5px 50px 0 5px;
+                span {
+                    display: inline-block;
+                    margin-left: 5px;
+                }
+            }
+            .hot-num {
+                display: inline-block;
+                font-size: 12px;
+                color: #999;
+                span {
+                    display: inline-block;
+                    margin-left: 5px;
+                }
+            }
+        }
+    }
 }
