--- a/src/css/classifylist.css
+++ b/src/css/classifylist.css
@@ -1,3 +1,80 @@
-div {
-  color: red;
+.header {
+  width: 1136px;
+  background: #fafafa;
+  padding: 10px 0;
+  margin-left: 62px;
+}
+.header p {
+  font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight: 700;
+  font-style: normal;
+  color: #999;
+  font-size: 14px;
+}
+.header p .vr-type {
+  color: #FFCC00;
+}
+.header p span {
+  display: inline-block;
+}
+.header p span {
+  margin-left: 20px;
+}
+.header .list-type span {
+  cursor: pointer;
+}
+.header .list-type span:hover {
+  color: #FFCC00;
+}
+.header .list-type .active {
+  color: #FFCC00;
+}
+.content {
+  background: #fafafa;
+  margin: 30px 62px;
+  width: 1136px;
+}
+.content .vr-list {
+  padding-bottom: 10px;
+}
+.content .vr-list .vr-box {
+  border: 1px solid #d7d7d7;
+  margin: 0 10px 20px 10px;
+  background: #fff;
+  cursor: pointer;
+}
+.content .vr-list .vr-box .product-img {
+  width: 100%;
+  min-height: 175px;
+}
+.content .vr-list .vr-box .product-img:hover {
+  border-right: 4px solid #fff;
+  border-bottom: 4px solid #fff;
+  box-shadow: 4px 4px 4px #888888;
+}
+.content .vr-list .vr-box .name {
+  margin: 5px 0 5px 5px;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 15px;
+  color: #999;
+}
+.content .vr-list .vr-box .id-box {
+  display: inline-block;
+  font-size: 12px;
+  color: #999;
+  margin: 5px 50px 0 5px;
+}
+.content .vr-list .vr-box .id-box span {
+  display: inline-block;
+  margin-left: 5px;
+}
+.content .vr-list .vr-box .hot-num {
+  display: inline-block;
+  font-size: 12px;
+  color: #999;
+}
+.content .vr-list .vr-box .hot-num span {
+  display: inline-block;
+  margin-left: 5px;
 }
