--- a/src/css/login.less
+++ b/src/css/login.less
@@ -87,6 +87,10 @@
                 color: red;
                 cursor: pointer;
             }
+            .login-msg {
+                min-height: 20px;
+                color: red;
+            }
         }
         .line-five {
             margin-top: 15px;
