--- a/src/css/classifylist.less
+++ b/src/css/classifylist.less
@@ -37,7 +37,7 @@
     margin: 30px 62px;
     width: 1136px;
     .vr-list {
-        padding-bottom: 10px;
+        padding: 10px 0;
         .vr-box {
             border: 1px solid #d7d7d7;
             margin: 0 10px 20px 10px;
