--- a/src/css/rankingList.less
+++ b/src/css/rankingList.less
@@ -1,3 +1,62 @@
-div {
-    color: red;
+.content {
+    width: 1136px;
+    .ranking {
+        background: #FAFAFA;
+        padding-bottom: 10px;
+        .title-box {
+            margin-bottom: 10px;
+            span {
+                font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
+                font-weight: 700;
+                font-style: normal;
+                font-size: 18px;
+                color: #FFCC33;
+                vertical-align: bottom;
+            }
+        }
+        .vr-box {
+            border: 1px solid #d7d7d7;
+            margin: 0 10px 20px 10px;
+            background: #fff;
+            cursor: pointer;
+            .product-img {
+                width: 232px;
+                min-height: 175px;
+            }
+            .product-img:hover {
+                border-right: 4px solid #fff;
+                border-bottom: 4px solid #fff;
+                box-shadow: 4px 4px 4px #888888;
+            }
+            .name {
+                margin: 5px 0 5px 5px;
+                font-weight: 700;
+                font-style: normal;
+                font-size: 15px;
+                color: #999;
+            }
+            .id-box {
+                display: inline-block;
+                font-size: 12px;
+                color: #999;
+                margin: 5px 50px 0 5px;
+                span {
+                    display: inline-block;
+                    margin-left: 5px;
+                }
+            }
+            .hot-num {
+                display: inline-block;
+                font-size: 12px;
+                color: #999;
+                span {
+                    display: inline-block;
+                    margin-left: 5px;
+                }
+            }
+        }
+    }
+    .download-ranking {
+        margin-top: 30px;
+    }
 }
