--- a/src/css/classifylist.css
+++ b/src/css/classifylist.css
@@ -35,7 +35,7 @@
   width: 1136px;
 }
 .content .vr-list {
-  padding-bottom: 10px;
+  padding: 10px 0;
 }
 .content .vr-list .vr-box {
   border: 1px solid #d7d7d7;
