--- a/src/css/rankingList.css
+++ b/src/css/rankingList.css
@@ -1,3 +1,62 @@
-div {
-  color: red;
+.content {
+  width: 1136px;
+}
+.content .ranking {
+  background: #FAFAFA;
+  padding-bottom: 10px;
+}
+.content .ranking .title-box {
+  margin-bottom: 10px;
+}
+.content .ranking .title-box span {
+  font-family: 'Arial Negreta', 'Arial Normal', 'Arial';
+  font-weight: 700;
+  font-style: normal;
+  font-size: 18px;
+  color: #FFCC33;
+  vertical-align: bottom;
+}
+.content .ranking .vr-box {
+  border: 1px solid #d7d7d7;
+  margin: 0 10px 20px 10px;
+  background: #fff;
+  cursor: pointer;
+}
+.content .ranking .vr-box .product-img {
+  width: 232px;
+  min-height: 175px;
+}
+.content .ranking .vr-box .product-img:hover {
+  border-right: 4px solid #fff;
+  border-bottom: 4px solid #fff;
+  box-shadow: 4px 4px 4px #888888;
+}
+.content .ranking .vr-box .name {
+  margin: 5px 0 5px 5px;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 15px;
+  color: #999;
+}
+.content .ranking .vr-box .id-box {
+  display: inline-block;
+  font-size: 12px;
+  color: #999;
+  margin: 5px 50px 0 5px;
+}
+.content .ranking .vr-box .id-box span {
+  display: inline-block;
+  margin-left: 5px;
+}
+.content .ranking .vr-box .hot-num {
+  display: inline-block;
+  font-size: 12px;
+  color: #999;
+}
+.content .ranking .vr-box .hot-num span {
+  display: inline-block;
+  margin-left: 5px;
+}
+.content .download-ranking {
+  margin-top: 30px;
 }
