--- a/src/css/classifylist.css
+++ b/src/css/classifylist.css
@@ -78,3 +78,36 @@
   display: inline-block;
   margin-left: 5px;
 }
+.pagination .page-total {
+  display: inline-block;
+}
+.pagination .page-total a {
+  position: relative;
+  float: left;
+  border: 1px solid #ddd;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  padding: 6px 12px;
+  cursor: none;
+  text-decoration: none;
+  color: #999;
+}
+.pagination .page-total a span:nth-child(1) {
+  display: inline-block;
+  margin-right: 10px;
+}
+.pagination li {
+  display: inline-block;
+  margin: 0 10px;
+}
+.pagination li a {
+  color: #999;
+  cursor: pointer;
+}
+.pagination li a:hover {
+  color: #999;
+  background: #66ccff;
+}
+.pagination li .active {
+  background: #66ccff;
+}
