--- a/src/css/classifylist.less
+++ b/src/css/classifylist.less
@@ -81,3 +81,39 @@
         }
     }
 }
+
+.pagination {
+    .page-total {
+        display: inline-block;
+        a {
+            position: relative;
+            float: left;
+            border: 1px solid #ddd;
+            border-top-left-radius: 4px;
+            border-bottom-left-radius: 4px;
+            padding: 6px 12px;
+            cursor: none;
+            text-decoration: none;
+            color: #999;
+            span:nth-child(1) {
+                display: inline-block;
+                margin-right: 10px;
+            }
+        }
+    }
+    li {
+        display: inline-block;
+        margin: 0 10px;
+        a {
+            color: #999;
+            cursor: pointer;
+        }
+        a:hover {
+            color: #999;
+            background: #66ccff;
+        }
+        .active {
+            background: #66ccff;
+        }
+    }
+}
