--- a/src/css/classifylist.css
+++ b/src/css/classifylist.css
@@ -94,7 +94,6 @@
 }
 .pagination .page-total a span:nth-child(1) {
   display: inline-block;
-  margin-right: 10px;
 }
 .pagination li {
   display: inline-block;
@@ -109,5 +108,28 @@
   background: #66ccff;
 }
 .pagination li .active {
+  background: #66ccff;
+}
+.pagination .pagination-num {
+  padding-left: 0;
+}
+.pagination .pagination-num li {
+  display: inline-block;
+  margin: 0 10px;
+}
+.pagination .pagination-num li a {
+  position: relative;
+  float: left;
+  border: 1px solid #ddd;
+  padding: 6px 12px;
+  cursor: pointer;
+  text-decoration: none;
+  color: #999;
+}
+.pagination .pagination-num li a:hover {
+  color: #999;
+  background: #66ccff;
+}
+.pagination .pagination-num li .active {
   background: #66ccff;
 }
